// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Front Page section 1`] = `
<View
  style={
    Object {
      "flex": 1,
      "minHeight": 300,
    }
  }
>
  <LeadTwoFrontSlice />
</View>
`;

exports[`Sunday Times magazine section 1`] = `
<RCTScrollView>
  <View>
    <View>
      <View
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "#000000",
            "position": "relative",
            "width": "100%",
          }
        }
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "#000000",
              "flex": 1,
              "height": 733.7,
              "opacity": 1,
              "overflow": "hidden",
              "width": "100%",
            }
          }
        >
          <TimesImage
            style={
              Object {
                "width": 750,
              }
            }
          />
          <View
            style={
              Object {
                "backgroundColor": "rgba(0, 0, 0, 0.6)",
                "borderRadius": 9999,
                "bottom": 20,
                "position": "absolute",
              }
            }
          >
            <Text
              style={
                Object {
                  "color": "#FFFFFF",
                  "letterSpacing": 0.3,
                  "paddingHorizontal": 13,
                  "paddingVertical": 8,
                }
              }
            >
              Tap image to view full magazine cover
            </Text>
          </View>
        </View>
      </View>
    </View>
    <View>
      <View
        style={
          Object {
            "flex": 1,
            "minHeight": 300,
          }
        }
      >
        <StandardSlice />
      </View>
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#DBDBDB",
              "height": 1,
              "marginHorizontal": 0,
            }
          }
        />
      </View>
    </View>
    <View>
      <View
        style={
          Object {
            "flex": 1,
            "minHeight": 300,
          }
        }
      >
        <View
          style={
            Object {
              "marginBottom": 20,
            }
          }
        >
          <View
            style={
              Object {
                "flex": 1,
                "overflow": "hidden",
              }
            }
          >
            <RNCWebView
              style={
                Object {
                  "backgroundColor": "#ffffff",
                  "flex": 1,
                  "height": 30,
                  "overflow": "hidden",
                }
              }
            />
          </View>
        </View>
      </View>
    </View>
  </View>
</RCTScrollView>
`;

exports[`Times magazine section 1`] = `
<RCTScrollView>
  <View>
    <View>
      <View
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "#000000",
            "position": "relative",
            "width": "100%",
          }
        }
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "#000000",
              "flex": 1,
              "height": 733.7,
              "opacity": 1,
              "overflow": "hidden",
              "width": "100%",
            }
          }
        >
          <TimesImage
            style={
              Object {
                "width": 750,
              }
            }
          />
          <View
            style={
              Object {
                "backgroundColor": "rgba(0, 0, 0, 0.6)",
                "borderRadius": 9999,
                "bottom": 20,
                "position": "absolute",
              }
            }
          >
            <Text
              style={
                Object {
                  "color": "#FFFFFF",
                  "letterSpacing": 0.3,
                  "paddingHorizontal": 13,
                  "paddingVertical": 8,
                }
              }
            >
              Tap image to view full magazine cover
            </Text>
          </View>
        </View>
      </View>
    </View>
    <View>
      <View
        style={
          Object {
            "flex": 1,
            "minHeight": 300,
          }
        }
      >
        <StandardSlice />
      </View>
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#DBDBDB",
              "height": 1,
              "marginHorizontal": 0,
            }
          }
        />
      </View>
    </View>
    <View>
      <View
        style={
          Object {
            "flex": 1,
            "minHeight": 300,
          }
        }
      >
        <View
          style={
            Object {
              "marginBottom": 20,
            }
          }
        >
          <View
            style={
              Object {
                "flex": 1,
                "overflow": "hidden",
              }
            }
          >
            <RNCWebView
              style={
                Object {
                  "backgroundColor": "#ffffff",
                  "flex": 1,
                  "height": 30,
                  "overflow": "hidden",
                }
              }
            />
          </View>
        </View>
      </View>
    </View>
  </View>
</RCTScrollView>
`;

exports[`puzzle bar with more than one puzzle 1`] = `
<View
  style={
    Object {
      "borderBottomWidth": 1,
      "borderColor": "#DBDBDB",
      "flexDirection": "row",
      "justifyContent": "center",
      "paddingVertical": 20,
    }
  }
>
  <Text
    style={
      Object {
        "color": "#1D1D1B",
        "fontFamily": "TimesModern-Regular",
        "fontSize": 20,
      }
    }
  >
    3
     recently opened puzzle
    s
  </Text>
  <View
    style={
      Object {
        "paddingLeft": 10,
        "paddingTop": 5,
      }
    }
  >
    <IconForwardArrow />
  </View>
</View>
`;

exports[`puzzle bar with no puzzles 1`] = `null`;

exports[`puzzle bar with one puzzle 1`] = `
<View
  style={
    Object {
      "borderBottomWidth": 1,
      "borderColor": "#DBDBDB",
      "flexDirection": "row",
      "justifyContent": "center",
      "paddingVertical": 20,
    }
  }
>
  <Text
    style={
      Object {
        "color": "#1D1D1B",
        "fontFamily": "TimesModern-Regular",
        "fontSize": 20,
      }
    }
  >
    1
     recently opened puzzle
  </Text>
  <View
    style={
      Object {
        "paddingLeft": 10,
        "paddingTop": 5,
      }
    }
  >
    <IconForwardArrow />
  </View>
</View>
`;

exports[`section item separator - huge 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#DBDBDB",
      "height": 1,
      "marginHorizontal": 113,
    }
  }
/>
`;

exports[`section item separator - medium 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#DBDBDB",
      "height": 1,
      "marginHorizontal": 40,
    }
  }
/>
`;

exports[`section item separator - small 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#DBDBDB",
      "height": 1,
      "marginHorizontal": 0,
    }
  }
/>
`;

exports[`section item separator - wide 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#DBDBDB",
      "height": 1,
      "marginHorizontal": 50,
    }
  }
/>
`;

exports[`section page 1`] = `
<RCTScrollView>
  <View>
    <View>
      <View
        style={
          Object {
            "flex": 1,
            "minHeight": 300,
          }
        }
      >
        <LeadOneAndFourSlice />
      </View>
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#DBDBDB",
              "height": 1,
              "marginHorizontal": 0,
            }
          }
        />
      </View>
    </View>
    <View>
      <View
        style={
          Object {
            "flex": 1,
            "minHeight": 300,
          }
        }
      >
        <View
          style={
            Object {
              "marginBottom": 20,
            }
          }
        >
          <View
            style={
              Object {
                "flex": 1,
                "overflow": "hidden",
              }
            }
          >
            <RNCWebView
              style={
                Object {
                  "backgroundColor": "#ffffff",
                  "flex": 1,
                  "height": 30,
                  "overflow": "hidden",
                }
              }
            />
          </View>
        </View>
      </View>
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#DBDBDB",
              "height": 1,
              "marginHorizontal": 0,
            }
          }
        />
      </View>
    </View>
    <View>
      <View
        style={
          Object {
            "flex": 1,
            "minHeight": 300,
          }
        }
      >
        <LeadOneFullWidthSlice />
      </View>
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#DBDBDB",
              "height": 1,
              "marginHorizontal": 0,
            }
          }
        />
      </View>
    </View>
    <View>
      <View
        style={
          Object {
            "flex": 1,
            "minHeight": 300,
          }
        }
      >
        <View
          style={
            Object {
              "marginBottom": 20,
            }
          }
        >
          <View
            style={
              Object {
                "flex": 1,
                "overflow": "hidden",
              }
            }
          >
            <RNCWebView
              style={
                Object {
                  "backgroundColor": "#ffffff",
                  "flex": 1,
                  "height": 30,
                  "overflow": "hidden",
                }
              }
            />
          </View>
        </View>
      </View>
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#DBDBDB",
              "height": 1,
              "marginHorizontal": 0,
            }
          }
        />
      </View>
    </View>
    <View>
      <View
        style={
          Object {
            "flex": 1,
            "minHeight": 300,
          }
        }
      >
        <LeadOneAndOneSlice />
      </View>
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#DBDBDB",
              "height": 1,
              "marginHorizontal": 0,
            }
          }
        />
      </View>
    </View>
    <View>
      <View
        style={
          Object {
            "flex": 1,
            "minHeight": 300,
          }
        }
      >
        <View
          style={
            Object {
              "marginBottom": 20,
            }
          }
        >
          <View
            style={
              Object {
                "flex": 1,
                "overflow": "hidden",
              }
            }
          >
            <RNCWebView
              style={
                Object {
                  "backgroundColor": "#ffffff",
                  "flex": 1,
                  "height": 30,
                  "overflow": "hidden",
                }
              }
            />
          </View>
        </View>
      </View>
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#DBDBDB",
              "height": 1,
              "marginHorizontal": 0,
            }
          }
        />
      </View>
    </View>
    <View>
      <View
        style={
          Object {
            "flex": 1,
            "minHeight": 300,
          }
        }
      >
        <SectionAd />
      </View>
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#DBDBDB",
              "height": 1,
              "marginHorizontal": 0,
            }
          }
        />
      </View>
    </View>
    <View>
      <View
        style={
          Object {
            "flex": 1,
            "minHeight": 300,
          }
        }
      >
        <View
          style={
            Object {
              "marginBottom": 20,
            }
          }
        >
          <View
            style={
              Object {
                "flex": 1,
                "overflow": "hidden",
              }
            }
          >
            <RNCWebView
              style={
                Object {
                  "backgroundColor": "#ffffff",
                  "flex": 1,
                  "height": 30,
                  "overflow": "hidden",
                }
              }
            />
          </View>
        </View>
      </View>
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#DBDBDB",
              "height": 1,
              "marginHorizontal": 0,
            }
          }
        />
      </View>
    </View>
    <View>
      <View
        style={
          Object {
            "flex": 1,
            "minHeight": 300,
          }
        }
      />
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#DBDBDB",
              "height": 1,
              "marginHorizontal": 0,
            }
          }
        />
      </View>
    </View>
    <View>
      <View
        style={
          Object {
            "flex": 1,
            "minHeight": 300,
          }
        }
      >
        <View
          style={
            Object {
              "marginBottom": 20,
            }
          }
        >
          <View
            style={
              Object {
                "flex": 1,
                "overflow": "hidden",
              }
            }
          >
            <RNCWebView
              style={
                Object {
                  "backgroundColor": "#ffffff",
                  "flex": 1,
                  "height": 30,
                  "overflow": "hidden",
                }
              }
            />
          </View>
        </View>
      </View>
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#DBDBDB",
              "height": 1,
              "marginHorizontal": 0,
            }
          }
        />
      </View>
    </View>
    <View
      style={
        Object {
          "height": 0,
        }
      }
    />
  </View>
</RCTScrollView>
`;

exports[`should render Secondary 2 No Pic and 2 instead of Secondary 2 and 2 for tablet 1`] = `
<RCTScrollView>
  <View>
    <View>
      <View
        style={
          Object {
            "flex": 1,
            "minHeight": 300,
          }
        }
      >
        <SecondaryTwoNoPicAndTwoSlice />
      </View>
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#DBDBDB",
              "height": 1,
              "marginHorizontal": 0,
            }
          }
        />
      </View>
    </View>
    <View>
      <View
        style={
          Object {
            "flex": 1,
            "minHeight": 300,
          }
        }
      >
        <View
          style={
            Object {
              "marginBottom": 20,
            }
          }
        >
          <View
            style={
              Object {
                "flex": 1,
                "overflow": "hidden",
              }
            }
          >
            <RNCWebView
              style={
                Object {
                  "backgroundColor": "#ffffff",
                  "flex": 1,
                  "height": 30,
                  "overflow": "hidden",
                }
              }
            />
          </View>
        </View>
      </View>
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#DBDBDB",
              "height": 1,
              "marginHorizontal": 0,
            }
          }
        />
      </View>
    </View>
    <View>
      <View
        style={
          Object {
            "flex": 1,
            "minHeight": 300,
          }
        }
      >
        <SecondaryTwoNoPicAndTwoSlice />
      </View>
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#DBDBDB",
              "height": 1,
              "marginHorizontal": 0,
            }
          }
        />
      </View>
    </View>
    <View>
      <View
        style={
          Object {
            "flex": 1,
            "minHeight": 300,
          }
        }
      >
        <View
          style={
            Object {
              "marginBottom": 20,
            }
          }
        >
          <View
            style={
              Object {
                "flex": 1,
                "overflow": "hidden",
              }
            }
          >
            <RNCWebView
              style={
                Object {
                  "backgroundColor": "#ffffff",
                  "flex": 1,
                  "height": 30,
                  "overflow": "hidden",
                }
              }
            />
          </View>
        </View>
      </View>
    </View>
  </View>
</RCTScrollView>
`;
